[gd_scene load_steps=12 format=3 uid="uid://jnyw8iep4fwu"]

[ext_resource type="Script" path="res://script/object/pet/pen.gd" id="1_6yo7h"]
[ext_resource type="Shader" path="res://shader/spatial/psx_lit_sprite.gdshader" id="1_p1l0w"]
[ext_resource type="Texture2D" uid="uid://vata7hk74f2b" path="res://asset/2d/sprite/object/pet/pen.png" id="2_s7grr"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_48ti3"]
render_priority = 0
shader = ExtResource("1_p1l0w")
shader_parameter/use_fog = true
shader_parameter/modulate_color = Color(1, 1, 1, 1)
shader_parameter/alpha_color = Color(1, 0, 1, 1)
shader_parameter/albedoTex = ExtResource("2_s7grr")
shader_parameter/billboard = true
shader_parameter/y_billboard = false
shader_parameter/animate = null
shader_parameter/animation_frames = null
shader_parameter/animation_speed = null
shader_parameter/per_quad_depth = false
shader_parameter/adjustable_depth = false
shader_parameter/depth_offset = null

[sub_resource type="AtlasTexture" id="AtlasTexture_xm5x2"]
atlas = ExtResource("2_s7grr")
region = Rect2(0, 0, 64, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_2grxp"]
atlas = ExtResource("2_s7grr")
region = Rect2(64, 0, 64, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_6m7a6"]
atlas = ExtResource("2_s7grr")
region = Rect2(128, 0, 64, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_jsys6"]
atlas = ExtResource("2_s7grr")
region = Rect2(192, 0, 64, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_i1tu7"]
atlas = ExtResource("2_s7grr")
region = Rect2(256, 0, 64, 80)

[sub_resource type="SpriteFrames" id="SpriteFrames_njbsu"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_xm5x2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2grxp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6m7a6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2grxp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jsys6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i1tu7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jsys6")
}],
"loop": true,
"name": &"default",
"speed": 4.0
}]

[sub_resource type="BoxShape3D" id="BoxShape3D_fgc5l"]
size = Vector3(0.25, 1, 0.25)

[node name="Pen" type="Marker3D"]
script = ExtResource("1_6yo7h")

[node name="PenSprite" type="AnimatedSprite3D" parent="."]
material_override = SubResource("ShaderMaterial_48ti3")
offset = Vector2(0, 40)
pixel_size = 0.035
sprite_frames = SubResource("SpriteFrames_njbsu")
autoplay = "default"
frame_progress = 0.992937

[node name="PetArea" type="Area3D" parent="."]
collision_layer = 3

[node name="PetCollision" type="CollisionShape3D" parent="PetArea"]
shape = SubResource("BoxShape3D_fgc5l")

[node name="Cry" type="AudioStreamPlayer3D" parent="."]
unit_size = 30.0
panning_strength = 2.0
bus = &"SFX"

[node name="CaughtTimer" type="Timer" parent="."]
one_shot = true

[connection signal="area_entered" from="PetArea" to="." method="_on_clone_collided"]
[connection signal="timeout" from="CaughtTimer" to="." method="_on_caught_timer_timeout"]
